# veilid

./: .bumpversion.cfg  .earthlyignore  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DAGGER.md  DEVELOPMENT.md  Earthfile  build_docs.bat  build_docs.sh  clippy.toml  dagger.json  version_bump.sh
veilid-core/: Cargo.toml  README.md  build.rs  run_tests.sh  run_windows_tests.bat
veilid-core/examples/basic/: Cargo.toml  README.md
veilid-core/examples/basic/src/: main.rs
veilid-core/examples/private_route/: Cargo.toml  README.md
veilid-core/examples/private_route/src/: main.rs
veilid-core/proto/: veilid.capnp  veilid_capnp.rs
veilid-core/src/: attachment_manager.rs  component.rs  core_context.rs  lib.rs  stats_accounting.rs  veilid_config.rs
veilid-core/src/block_store/: mod.rs
veilid-core/src/crypto/: dh_cache.rs  guard.rs  mod.rs
veilid-core/src/crypto/crypto_system/: blake3digest512.rs  mod.rs
veilid-core/src/crypto/envelope/: mod.rs
veilid-core/src/crypto/none/: mod.rs
veilid-core/src/crypto/receipt/: mod.rs
veilid-core/src/crypto/tests/: fixtures.rs  mod.rs  test_crypto.rs  test_envelope_receipt.rs  test_types.rs
veilid-core/src/crypto/tests_crypto/: mod.rs  test_crypto.rs  test_envelope_receipt.rs  test_types.rs
veilid-core/src/crypto/types/: byte_array_types.rs  crypto_typed.rs  crypto_typed_group.rs  keypair.rs  mod.rs  record_key.rs
veilid-core/src/intf/native/: protected_store.rs  system.rs
veilid-core/src/intf/wasm/: protected_store.rs
veilid-core/src/logging/: api_tracing_layer.rs  duration_recorder.rs  facilities.rs  fmt_strip_veilid_fields.rs  macros.rs  mod.rs  veilid_layer_filter.rs
veilid-core/src/logging/veilid_layer_filter/: component_log_facility.rs  config.rs  facility_enable_map.rs  filter_globals.rs  log_directive.rs  log_key_filter.rs  mod.rs
veilid-core/src/logging/veilid_tracing/: log_output.rs  mod.rs
veilid-core/src/network_manager/: address_check.rs  address_filter.rs  connection_handle.rs  connection_manager.rs  connection_table.rs  debug.rs  mod.rs  network_connection.rs  node_contact_method_cache.rs  receipt_manager.rs  relay_worker.rs  send_data.rs  stats.rs
veilid-core/src/network_manager/bootstrap/: bootstrap_record.rs  debug.rs  (+2 more)
veilid-core/src/protected_store/: mod.rs  native.rs  wasm.rs
veilid-core/src/routing_table/: bucket.rs  bucket_entry.rs  debug.rs  find_peers.rs  geolocation.rs  mod.rs  privacy.rs  stats_accounting.rs
veilid-core/src/rpc_processor/: debug.rs  descriptor_mode.rs  destination.rs  error.rs  message.rs  message_header.rs  mod.rs  operation_waiter.rs  rendered_operation.rs  rpc_app_call.rs  rpc_app_message.rs  rpc_cancel_tunnel.rs  rpc_complete_tunnel.rs  rpc_find_block.rs  rpc_find_node.rs  rpc_get_value.rs  rpc_inspect_value.rs  rpc_return_receipt.rs  rpc_route.rs  rpc_set_value.rs  rpc_signal.rs  rpc_start_tunnel.rs  rpc_status.rs  rpc_supply_block.rs  rpc_transact_begin.rs  rpc_transact_command.rs  rpc_validate_dial_info.rs  rpc_value_changed.rs  rpc_watch_value.rs  rpc_worker.rs  sender_peer_info.rs  waitable_reply.rs
veilid-core/src/storage_manager/: active_subkey_writes.rs  close_record.rs  create_record.rs  debug.rs  delete_record.rs  get_value.rs  inspect_record.rs  local_record_detail.rs  local_record_store_interface.rs  mod.rs  offline_subkey_writes.rs  open_record.rs  record_encryption.rs  record_key.rs  rehydrate.rs  remote_record_detail.rs  schema.rs  set_value.rs  storage_manager_locks.rs  transaction.rs  transaction_begin.rs  transaction_command.rs  watch_value.rs
veilid-core/src/table_store/: mod.rs  native.rs  table_db.rs  wasm.rs
veilid-core/src/tests/: fixtures.rs  mod.rs  native.rs
veilid-core/src/veilid_api/: api.rs  debug.rs  dht_transaction.rs  error.rs  mod.rs  routing_context.rs
veilid-core/tests/: web.rs
veilid-python/: pyproject.toml
veilid-python/tests/: test_basic.py  test_crypto.py  test_dht.py  test_dht_transactions.py  test_routing_context.py
veilid-python/veilid/: api.py  config.py  types.py
veilid-python/veilid/schema/: RecvMessage.json
veilid-remote-api/: Cargo.toml
veilid-remote-api/src/: crypto_system.rs  dht_transaction.rs  lib.rs  process.rs  routing_context.rs
veilid-server/: .gitignore  Cargo.toml
veilid-server/src/: client_api.rs  logs.rs  main.rs  server.rs  settings.rs  tools.rs  unix.rs  veilid_logs.rs
veilid-tools/: Cargo.toml  run_tests.sh  run_windows_tests.bat
veilid-tools/src/: assembly_buffer.rs  async_peek_stream.rs  deferred_stream_processor.rs  event_bus.rs  eventual.rs  eventual_base.rs  eventual_value.rs  eventual_value_clone.rs  interval.rs  lib.rs  log_unwrap.rs  must_join_handle.rs  must_join_single_future.rs  network_result.rs  raw_timestamp.rs  sleep.rs  socket_tools.rs  spawn.rs  split_url.rs  startup_lock.rs  tick_task.rs  tools.rs  trim_backtrace.rs  wasm.rs  wasm_tools.rs
veilid-tools/src/async_locks/: async_mutex.rs  async_rw_lock.rs  async_semaphore.rs  async_tag_lock.rs  debug_locks.rs  debug_locks_detect.rs  mod.rs
veilid-tools/src/network_interfaces/: apple.rs  mod.rs  netlink.rs  openbsd.rs  windows.rs
veilid-tools/src/resolver/: mod.rs  wasm.rs  windows.rs
veilid-tools/src/virtual_network/: router_op_table.rs  virtual_gateway.rs  virtual_tcp_listener.rs  virtual_tcp_listener_stream.rs  virtual_tcp_stream.rs  virtual_udp_socket.rs
veilid-tools/tests/: web.rs
veilid-wasm/: Cargo.toml  README.md  package-lock.json  tsconfig.json  wasm_build_dart.sh  wasm_build_js.sh  wasm_test_js.sh
veilid-wasm/example/test-bench/: package-lock.json  package.json
veilid-wasm/src/: lib.rs  veilid_routing_context_js.rs  veilid_version.rs  veilid_wasm_config.rs  wasm_helpers.rs
veilid-wasm/src/dart/: mod.rs
veilid-wasm/src/js/: mod.rs  veilid_client_js.rs  veilid_crypto_js.rs  veilid_routing_context_js.rs  veilid_table_db_js.rs
veilid-wasm/tests/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json  wdio.conf.ts
veilid-wasm/tests/src/: VeilidRoutingContext.test.ts  VeilidTable.test.ts  veilidClient.test.ts  veilidCrypto.test.ts
(+417 files in other folders)
