[package]
# --- Bumpversion match - do not reorder
name = "veilid-core"
version = "0.5.1"
# ---
description = "Core library used to create a Veilid node and operate it as part of an application"
build = "build.rs"
resolver = "2"
repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/veilid-core"
homepage = "https://veilid.gitlab.io/developer-book/"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
path = "src/lib.rs"

[features]

default = ["default-tokio"]

# Common features
default-tokio = ["enable-crypto-vld0", "rt-tokio", "instrument"]
default-async-std = ["enable-crypto-vld0", "rt-async-std", "instrument"]
default-wasm = ["enable-crypto-vld0"]

# Runtimes
rt-async-std = ["async-std", "veilid-tools/rt-async-std"]
rt-tokio = ["tokio", "veilid-tools/rt-tokio"]

# Crypto support features
enable-crypto-vld0 = [
    "ed25519-dalek",
    "x25519-dalek",
    "curve25519-dalek",
    "blake3",
    "chacha20poly1305",
    "chacha20",
    "argon2",
    "blake2", # To apply optimization for argon2 code size
]
enable-crypto-none = [
    "ed25519-dalek",
    "curve25519-dalek",
    "blake3",
    "argon2",
    "digest",
    "blake2", # To apply optimization for argon2 code size
]

# Protocol support features
enable-protocol-wss = []

# JSON format to use for serializing
json-camel-case = []

# GeoIP
geolocation = ["maxminddb", "reqwest"]

# Features that go against "Natural Security" concepts
# https://gitlab.com/veilid/veilid/-/issues/420
footgun = []

# Reserved for use by future components
unstable-blockstore = []
unstable-tunnels = []
virtual-network = ["veilid-tools/virtual-network"]
virtual-network-server = ["veilid-tools/virtual-network-server"]

# Debugging and testing features
test-util = ["veilid-tools/test-util"]
instrument = []
verbose-tracing = ["instrument"]
tracking = []
crypto-test = ["enable-crypto-vld0", "enable-crypto-none"]
crypto-test-none = ["enable-crypto-none"]
veilid_core_android_tests = ["dep:paranoid-android", "test-util"]
veilid_core_ios_tests = ["dep:tracing-oslog", "test-util"]
debug-locks = ["veilid-tools/debug-locks"]
debug-locks-detect = [
    "veilid-tools/debug-locks",
    "veilid-tools/debug-locks-detect",
] # This does not work yet, do not enable


### DEPENDENCIES

[dependencies]

# Tools
veilid-tools = { version = "0.5.1", path = "../veilid-tools", features = [
    "tracing",
], default-features = false }
paste = "1.0.15"
once_cell = "1.20.3"
backtrace = "^0.3.71"
num-traits = "0.2.19"
shell-words = "1.1.0"
cfg-if = "1.0.0"
hex = "0.4.3"
lazy_static = "1.5.0"
directories = "5.0.1"
get-size = { version = "0.1.4", features = ["derive"] }
async-trait = "0.1.89"
macro_rules_attribute = "0.2.2"

# Logging
tracing = { version = "0.1.41", features = ["log", "attributes"] }
tracing-subscriber = "0.3.19"
eyre = "0.6.12"
thiserror = "1.0.69"

# Data structures
enumset = { version = "1.1.5", features = ["serde"] }
keyvaluedb = "=0.1.6"
range-set-blaze = "0.1.16"
weak-table = "0.3.2"
hashlink = { package = "veilid-hashlink", version = "=0.1.3", features = [
    "serde_impl",
] }

# System
futures-util = { version = "0.3.31", default-features = false, features = [
    "alloc",
] }
flume = { version = "0.11.1", features = ["async"] }
parking_lot = { version = "0.12.5", features = ["arc_lock"] }
stop-token = { version = "0.7.0", default-features = false }
arc-swap = { version = "1.8.0" }

# Crypto
ed25519-dalek = { version = "2.1.1", optional = true, default-features = false, features = [
    "alloc",
    "rand_core",
    "digest",
    "zeroize",
] }
x25519-dalek = { version = "2.0.1", optional = true, default-features = false, features = [
    "alloc",
    "static_secrets",
    "zeroize",
    "precomputed-tables",
] }
curve25519-dalek = { version = "4.1.3", optional = true, default-features = false, features = [
    "alloc",
    "zeroize",
    "precomputed-tables",
] }
blake3 = { version = "1.8.2", optional = true }
blake2 = { version = "^0", optional = true, default-features = false, features = ["size_opt"]} # Size optimization for argon2 crate (via feature unification)
chacha20poly1305 = { version = "0.10.1", optional = true }
chacha20 = { version = "0.9.1", optional = true }
argon2 = { version = "0.5.3", optional = true }
digest = { version = "0.10.7", optional = true, features = ["rand_core"] }

# Serialization
capnp = { version = "0.21.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.218", features = ["derive", "rc"] }
serde_json = { version = "1.0.140" }
json = "0.12.4"
data-encoding = { version = "2.8.0" }
schemars = "1.0.3"
lz4_flex = { version = "0.11.3", default-features = false, features = [
    "safe-encode",
    "safe-decode",
] }
indent = "0.1.1"
sanitize-filename = "0.5.0"
serde_with = "3.12.0"
bytes = { version = "1.10.1", features = ["serde"] }

### Dependencies for native builds only
# Linux, Windows, Mac, iOS, Android
[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]

# Tools
maxminddb = { version = "0.24.0", optional = true }

# System
async-std = { version = "1.13.0", features = ["unstable"], optional = true }
sysinfo = { version = "^0.30.13", default-features = false }
tokio = { version = "1.43.0", features = [
    "rt-multi-thread",
    "net",
    "time",
    "sync",
    "parking_lot",
], optional = true }
futures-util = { version = "0.3.31", default-features = false, features = [
    "async-await",
    "sink",
    "std",
    "io",
] }

# Data structures
keyring-manager = "=0.6.0"
keyvaluedb-sqlite = "=0.1.6"
async-sqlite = { version = "=0.5.3" } # Remove this once keyvaluedb-sqlite is updated to 0.1.7

# Network
async-tungstenite = { version = "0.27.0", features = ["async-tls"] }
igd = { package = "veilid-igd", version = "0.1.1" }
async-tls = { version = "0.13.0" }
rustls = "0.21.12"
rustls-pemfile = "1.0.4"

### Dependencies for WASM builds only
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]

veilid-tools = { version = "0.5.1", path = "../veilid-tools", default-features = false, features = [
    "rt-wasm-bindgen",
] }

# System
js-sys = "0.3.83"
wasm-bindgen = "=0.2.108"
wasm-bindgen-derive = "0.3.0"

send_wrapper = { version = "0.6.0", features = ["futures"] }
serde_bytes = { version = "0.11", default-features = false, features = [
    "alloc",
] }
tsify = { version = "0.5.5", features = ["js"] }
serde-wasm-bindgen = "0.6.5"

# Network
ws_stream_wasm = "0.7.4"

# Data Structures
keyvaluedb-web = "=0.1.6"

### Configuration for WASM32 'web-sys' crate
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies.web-sys]
version = "0.3.77"
features = [
    'Document',
    'HtmlDocument',
    # 'Element',
    # 'HtmlElement',
    # 'Node',
    'IdbFactory',
    'IdbOpenDbRequest',
    'Storage',
    'Location',
    'Window',
]

# Dependencies for Android
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
paranoid-android = { version = "0.2.2", optional = true }

# Dependencies for Windows
[target.'cfg(target_os = "windows")'.dependencies]
# Nothing currently

# Dependencies for iOS
[target.'cfg(target_os = "ios")'.dependencies]
tracing-oslog = { version = "0.3.0", optional = true }

### DEV DEPENDENCIES

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
bugsalot = { package = "veilid-bugsalot", version = "0.2.0" }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
wasm-bindgen-test = "0.3.56"
console_error_panic_hook = "0.1.7"
veilid-tracing-wasm = "=0.1.0"

### BUILD OPTIONS

[build-dependencies]
capnpc = "0.21.0"
glob = "0.3.2"
sha2 = "0.10.8"
hex = "0.4.3"
reqwest = { version = "0.11", features = ["blocking"], optional = true }
bosion = { version = "1.1.2", default-features = false }

[package.metadata.cargo-machete]
# ignore build dependencies and crates that are only used in derives
ignored = ["capnpc", "glob", "sha2", "reqwest", "serde_bytes", "js-sys"]

[lints]
workspace = true
