[project]
name = "veilid"
version = "0.5.2"
# ---
description = "Create an application in Python using the distributed Veilid framework for private, E2EE, app-to-app communication."
authors = [{ name = "Veilid Team", email = "contact@veilid.com" }]
requires-python = ">=3.12.5,<4"
readme = "README.md"
license = "MPL-2.0"
dependencies = [
    "jsonschema>=4.26.0,<5",
    "appdirs>=1.4.4,<2",
]

[project.urls]
homepage = "https://veilid.com"
repository = "https://gitlab.com/veilid/veilid"

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10",
    "pytest-cov>=7.0.0,<8",
    "pytest-asyncio>=1.3.0,<2"
]

[tool.hatch.build.targets.sdist]
include = ["veilid"]

[tool.hatch.build.targets.wheel]
include = ["veilid"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 99

[tool.mypy]
check_untyped_defs = true
