[package]
# --- Bumpversion match - do not reorder
name = "veilid-server"
version = "0.5.0"
# ---
description = "Veilid Headless Node"
resolver = "2"
repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "veilid-server"
path = "src/main.rs"

[features]
default = [
    "rt-tokio",
    "veilid-core/default",
    "otlp-tonic",
    "veilid-remote-api/default",
]

default-async-std = [
    "rt-async-std",
    "veilid-core/default-async-std",
    "veilid-remote-api/default-async-std",
]

enable-protocol-wss = ["veilid-core/enable-protocol-wss"]
footgun = ["veilid-core/footgun"]

rt-tokio = [
    "veilid-core/rt-tokio",
    "tokio",
    "tokio-stream",
    "tokio-util",
    "opentelemetry_sdk/rt-tokio",
]

rt-async-std = [
    "veilid-core/rt-async-std",
    "async-std",
    "opentelemetry_sdk/rt-async-std",
]

# Debugging and testing features
crypto-test = ["rt-tokio", "veilid-core/crypto-test"]
crypto-test-none = ["rt-tokio", "veilid-core/crypto-test-none"]
debug-json-api = []
debug-locks = ["veilid-core/debug-locks"]
flame = ["tracing-flame"]
geolocation = ["veilid-core/geolocation"]
# otlp-grpc = ["opentelemetry-otlp/grpc-sys", "opentelemetry-otlp/trace"]
otlp-tonic = ["opentelemetry-otlp/grpc-tonic", "opentelemetry-otlp/trace"]
perfetto = ["tracing-perfetto"]
tokio-console = ["rt-tokio", "console-subscriber"]
tracking = ["veilid-core/tracking"]
virtual-network = [
    "veilid-core/virtual-network",
    "veilid-core/virtual-network-server",
]

[dependencies]
veilid-core = { path = "../veilid-core", default-features = false }
veilid-remote-api = { path = "../veilid-remote-api", default-features = false }
tracing = { version = "^0.1.41", features = ["log", "attributes"] }
tracing-subscriber = { version = "^0.3.19", features = ["env-filter", "time"] }
tracing-appender = "^0.2.3"
tracing-opentelemetry = "^0.24.0"
# Buggy: tracing-error = "^0"
opentelemetry = { version = "^0.23" }
opentelemetry-otlp = { version = "^0.16.0", default-features = false, optional = true }
opentelemetry_sdk = "0.23.0"
opentelemetry-semantic-conventions = "^0.16.0"
async-std = { version = "^1.13.0", features = ["unstable"], optional = true }
tokio = { version = "^1.43.0", features = ["full", "tracing"], optional = true }
tokio-stream = { version = "^0.1.17", features = ["net"], optional = true }
tokio-util = { version = "^0.7.13", features = ["compat"], optional = true }
console-subscriber = { version = "^0.3.0", optional = true }
async-tungstenite = { version = "^0.27.0", features = ["async-tls"] }
color-eyre = { version = "^0.6.3", default-features = false }
backtrace = "^0.3.71"
clap = { version = "^4.5.31", features = ["derive", "string", "wrap_help"] }
directories = "^5.0.1"
parking_lot = "^0.12.3"
config = { version = "^0.14.1", default-features = false, features = ["yaml"] }
cfg-if = "^1.0.0"
serde = "^1.0.218"
serde_derive = "^1.0.218"
serde_yaml = { package = "serde_yaml_ng", version = "^0.10.0" }
serde_test = "^1.0.177"
json = "^0"
futures-util = { version = "^0", default-features = false, features = [
    "alloc",
] }
url = "^2"
ctrlc = "^3"
lazy_static = "^1"
bugsalot = { package = "veilid-bugsalot", version = "0.2.0" }
flume = { version = "^0", features = ["async"] }
rpassword = "^7"
hostname = "^0"
stop-token = { version = "^0", default-features = false }
sysinfo = { version = "^0.30.13", default-features = false }
wg = { version = "^0.9.2", features = ["future"] }
tracing-flame = { version = "0.2.0", optional = true }
time = { version = "0.3.38", features = ["local-offset"] }
chrono = "0.4.40"

[target.'cfg(windows)'.dependencies]
windows-service = "^0"
ansi_term = "^0"

[target.'cfg(unix)'.dependencies]
daemonize = "^0.5.0"
signal-hook = "^0.3.17"
signal-hook-async-std = "^0.2.2"
nix = "^0.29.0"
tracing-perfetto = { version = "0.1.5", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
tracing-journald = "^0.3.1"

[dev-dependencies]
serial_test = "^3.2.0"

[lints]
workspace = true
