[package]
# --- Bumpversion match - do not reorder
name = "veilid-wasm"
version = "0.5.0"
# ---
description = "Veilid bindings for WebAssembly"
resolver = "2"
repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = ["enable-crypto-vld0", "js"]
default-dart = ["enable-crypto-vld0", "dart"]
js = []
dart = []
enable-crypto-vld0 = ["veilid-core/enable-crypto-vld0"]
# enable-crypto-vld1 = ["veilid-core/enable-crypto-vld1"]
enable-crypto-none = ["veilid-core/enable-crypto-none"]
crypto-test = ["enable-crypto-vld0", "enable-crypto-none"]
crypto-test-none = ["enable-crypto-none"]
enable-protocol-wss = ["veilid-core/enable-protocol-wss"]
footgun = ["veilid-core/footgun"]
unstable-tunnels = ["veilid-core/unstable-tunnels"]
unstable-blockstore = ["veilid-core/unstable-blockstore"]

[dependencies]
veilid-core = { version = "0.5.0", path = "../veilid-core", default-features = false, features = ["json-camel-case"]}

tracing = { version = "^0", features = ["log", "attributes"] }
veilid-tracing-wasm = "^0"
tracing-subscriber = "^0"

js-sys = "0.3.83"
wasm-bindgen = { version = "0.2.106", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.56"
wasm-bindgen-derive = "0.3.0"

console_error_panic_hook = "^0"
cfg-if = "^1"
serde_json = "^1"
serde_bytes = { version = "0.11", default-features = false, features = [
  "alloc",
] }
serde = "^1"
lazy_static = "^1"
send_wrapper = "^0"
futures-util = { version = "^0" }
data-encoding = { version = "^2" }
gloo-utils = { version = "^0", features = ["serde"] }
tsify = { version = "0.5.5", features = ["js"] }
serde-wasm-bindgen = "0.6.5"
paste = "1.0.15"

[dev-dependencies]
wasm-bindgen-test = "0.3.56"
parking_lot = "0.12.3"

[lints]
workspace = true

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true
