[package]
name = "veilid-core-examples-basic"
version = "0.1.0"
# ---
description = "Example demonstrating a basic Veilid application"
resolver = "2"
repository.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
autobins = false
publish = false

[[example]]
name = "basic-example"
path = "./src/main.rs"

[dependencies]
tokio = { version = "^1.43.0", features = [ "signal", "macros", "rt" ] }
veilid-core = { path = "../../../veilid-core" }

[lints]
workspace = true
